--- a/index.html
+++ b/index.html
@@ -9,39 +9,46 @@
 </head>
 <body>
     <header>
-        <ul>
-            <li>Header logo</li>
-            <li><a href="#">header link one</a></li>
-            <li><a href="#">header link two</a></li>
-            <li><a href="#">header link three</a></li>
-        </ul>
+        <div class="navbar">
+            <ul>
+                <li>Header logo</li>
+                <li><a href="#">header link one</a></li>
+                <li><a href="#">header link two</a></li>
+                <li><a href="#">header link three</a></li>
+            </ul>
+        </div>
     </header>
     <main>
-        <h1>This website is awesome</h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo veniam dolor omnis reiciendis in inventore libero alias exercitationem maxime quo rem quasi quis, ratione ad beatae autem, ut quae numquam.</p>
-        <img src="landing-image.jpg" alt="halloween">
-        <button>Sign up</button>
-        <h2>Some random information</h2>
-        <img src="four-image.jpg" alt="oops">
-        <p>Text under the image</p>
-        <img src="four-image.jpg" alt="oops">
-        <p>Text under the image</p>
-        <img src="four-image.jpg" alt="oops">
-        <p>Text under the image</p>
-        <img src="four-image.jpg" alt="oops">
-        <p>Text under the image</p>
-
-        <section>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia, et? Ratione nemo laboriosam saepe tempora eum, odio assumenda at veniam unde reprehenderit natus ipsum dicta veritatis? Eligendi voluptatem aspernatur quisquam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint excepturi quas enim aliquid nisi quidem vitae delectus nemo eligendi doloremque! Optio, soluta natus possimus distinctio eos quo delectus nemo suscipit.
-            </p>
+        <div class="main">
+            <h1>This website is awesome</h1>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo veniam dolor omnis reiciendis in inventore libero alias   exercitationem maxime quo rem quasi quis, ratione ad beatae autem, ut quae numquam.</p>
+            <img src="landing-image.jpg" alt="halloween">
+            <button>Sign up</button>
+        </div>
+        <div class="pics">
+            <h2>Some random information</h2>
+            <img src="four-image.jpg" alt="oops">
+            <p>Text under the image</p>
+            <img src="four-image.jpg" alt="oops">
+            <p>Text under the image</p>
+            <img src="four-image.jpg" alt="oops">
+            <p>Text under the image</p>
+            <img src="four-image.jpg" alt="oops">
+            <p>Text under the image</p>
+        </div>
+        
+        <section class="quote">
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia, et? Ratione nemo laboriosam saepe tempora eum, odio assumenda at veniam unde reprehenderit natus ipsum dicta veritatis? Eligendi voluptatem aspernatur quisquam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint excepturi quas enim aliquid nisi quidem vitae delectus nemo eligendi doloremque! Optio, soluta natus possimus distinctio eos quo delectus nemo suscipit.</p>
             <p>Some ancient greek quote</p>
         </section>
-        <section>
+
+        <section class="register">
             <p>Go register now! Hurry up!</p>
             <p>Sign in to see more</p>
             <button>Sign in</button>
         </section>
+
     </main>
-    <footer>Copyright &copy; The Odin Project 2023 </footer>
+    <footer class="footer">Copyright &copy; The Odin Project 2023 </footer>
 </body>
 </html>
