--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 </head>
 <body>
     <header>
-        <div class="navbar">
-            <ul>
-                <li>Header logo</li>
+        
+            <ul class="navbar">
+                <li class="logo">Header logo</li>
                 <li><a href="#">header link one</a></li>
                 <li><a href="#">header link two</a></li>
                 <li><a href="#">header link three</a></li>
             </ul>
-        </div>
+        
     </header>
     <main>
         <div class="main">
