--- a/index.html
+++ b/index.html
@@ -19,11 +19,17 @@
         
     </header>
     <main>
+        <div class="background">
         <div class="main">
-            <h1>This website is awesome</h1>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo veniam dolor omnis reiciendis in inventore libero alias   exercitationem maxime quo rem quasi quis, ratione ad beatae autem, ut quae numquam.</p>
-            <img src="landing-image.jpg" alt="halloween">
-            <button>Sign up</button>
+            <div class="header">
+                <h1>This website is awesome</h1>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo veniam dolor omnis reiciendis in inventore libero alias       exercitationem maxime quo rem quasi quis, ratione ad beatae autem, ut quae numquam.</p>
+                <button>Sign up</button>
+            </div>
+            <div class="main-img">
+                <img src="landing-image.jpg" alt="halloween">
+            </div>
+        </div>
         </div>
         <div class="pics">
             <h2>Some random information</h2>
