style quote, minor styling later

--- a/index.html
+++ b/index.html
@@ -31,22 +31,32 @@
             </div>
         </div>
         </div>
-        <div class="pics">
-            <h2>Some random information</h2>
-            <img src="four-image.jpg" alt="oops">
-            <p>Text under the image</p>
-            <img src="four-image.jpg" alt="oops">
-            <p>Text under the image</p>
-            <img src="four-image.jpg" alt="oops">
-            <p>Text under the image</p>
-            <img src="four-image.jpg" alt="oops">
-            <p>Text under the image</p>
-        </div>
         
+            <h2>Some random information</h2>
+            <div class="pics">
+            <div class="img">
+                <img src="four-image.jpg" alt="oops">
+                <p>Text under the image</p>
+            </div>
+            <div class="img">
+                <img src="four-image.jpg" alt="oops">
+                <p>Text under the image</p>
+            </div>
+            <div class="img">
+                <img src="four-image.jpg" alt="oops">
+                <p>Text under the image</p>
+            </div>
+            <div class="img">
+                <img src="four-image.jpg" alt="oops">
+                <p>Text under the image</p>
+            </div>
+        </div>
+        <div class="quotebox">
         <section class="quote">
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia, et? Ratione nemo laboriosam saepe tempora eum, odio assumenda at veniam unde reprehenderit natus ipsum dicta veritatis? Eligendi voluptatem aspernatur quisquam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint excepturi quas enim aliquid nisi quidem vitae delectus nemo eligendi doloremque! Optio, soluta natus possimus distinctio eos quo delectus nemo suscipit.</p>
-            <p>Some ancient greek quote</p>
+            <p class="para-quote">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia, et? Ratione nemo laboriosam saepe tempora eum, odio assumenda at veniam unde reprehenderit natus ipsum dicta veritatis? Eligendi voluptatem aspernatur quisquam! Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <p class="quote-author">-Some ancient greek quote</p>
         </section>
+        </div>
 
         <section class="register">
             <p>Go register now! Hurry up!</p>
