style pics borders

--- a/index.html
+++ b/index.html
@@ -38,19 +38,19 @@
             <h2 class="info-text">Some random information</h2>
             <div class="pics">
             <div class="img">
-                <img src="four-image.jpg" alt="oops">
+                <img class="pic" src="four-image.jpg" alt="oops">
                 <p>Text under the image</p>
             </div>
             <div class="img">
-                <img src="four-image.jpg" alt="oops">
+                <img class="pic" src="four-image.jpg" alt="oops">
                 <p>Text under the image</p>
             </div>
             <div class="img">
-                <img src="four-image.jpg" alt="oops">
+                <img class="pic" src="four-image.jpg" alt="oops">
                 <p>Text under the image</p>
             </div>
             <div class="img">
-                <img src="four-image.jpg" alt="oops">
+                <img class="pic" src="four-image.jpg" alt="oops">
                 <p>Text under the image</p>
             </div>
         </div>
