change quote style, fail to do lighter

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
         <div class="quotebox">
         <section class="quote">
-            <p class="para-quote">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia, et? Ratione nemo laboriosam saepe tempora eum, odio assumenda at veniam unde reprehenderit natus ipsum dicta veritatis? Eligendi voluptatem aspernatur quisquam! Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <p class="para-quote"><em> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia, et? Ratione nemo laboriosam saepe tempora eum, odio assumenda at veniam unde reprehenderit natus ipsum dicta veritatis? Eligendi voluptatem aspernatur quisquam! Lorem ipsum dolor sit amet consectetur adipisicing elit. </em></p>
             <p class="quote-author">-Some ancient greek quote</p>
         </section>
         </div>
